# doc-to-md

./: .gitignore  README.md  pyproject.toml
src/doc_to_md/: __init__.py  cli.py  converter.py  exceptions.py
src/doc_to_md/parsers/: __init__.py  base.py  docx_parser.py  epub_parser.py  html_parser.py  hwp_parser.py  image_parser.py  pdf_parser.py  pptx_parser.py  text_parser.py  xlsx_parser.py
src/doc_to_md/postprocess/: __init__.py  cleaner.py  formatter.py
src/doc_to_md/utils/: file_detect.py  image_handler.py
src/doc_to_md/web/: __init__.py  app.py
src/doc_to_md/web/static/: style.css
src/doc_to_md/web/templates/: index.html
tests/: test_converter.py  test_file_detect.py  test_postprocess.py
tests/fixtures/: test.docx  test.html  test.txt  test.xlsx
tests/test_parsers/: test_base.py  test_docx_parser.py  test_html_parser.py  test_pdf_parser.py  test_text_parser.py  test_xlsx_parser.py
